# face-recon

./: .gitignore  CMakeLists.txt  README.md
Data/: bfm_weights.txt  image_landmarks_dlib.txt  image_landmarks_faceal.txt  landmark2019_68.anl  landmark_68.anl  landmrks_pipnet_smile.txt  smile_weights.txt  weights.txt
Data/RGB/: landmrks_pipnet_expr3.txt  landmrks_pipnet_image.txt  landmrks_pipnet_lookingfromdown.txt  landmrks_pipnet_small.txt
Data/samples/: landmarkc_002_06_image.txt  landmarkc_013_11_image.txt  landmarkc_023_11_image.txt
include/: bfm_manager.h  constant.h  eigen.h  stb_image.h  transform.hpp
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
moreImagesandLandmarks/: landmarkc_001_06_image.txt  landmarkc_003_06_image.txt  landmarkc_005_06_image.txt  landmarkc_015_00_image.txt
src/: bfm_manager.cpp  ceres_optimizer.h  cost_functions.cpp  del.cpp  expr_transfer.cpp  face_mesh.h  main.cpp  optimizer.cpp  optimizer_class.h  procrustes_aligner.h  rgb_main.cpp  shader_class.h  test.cpp  utils.h  visualizer.cpp  visualizer.h
src/shaders/: 4.1.texture.mesh.fs  4.1.texture.mesh.vs  4.1.texture.vs
